--- a/src/models/templates/base.html
+++ b/src/models/templates/base.html
@@ -2,9 +2,13 @@
 <title>Pokemon Reverse Dictionary</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<body class="container bg-light">
+<body class="p-2 bg-light text-center">
     {% block header %}
-        <h1 class="text-center mb-4 p-2">{% block title %}Pokemon Reverse Dictionary Demo{% endblock %}</h1>
+        <h1 class="mb-4">{% block title %}Pokemon Reverse Dictionary Demo{% endblock %}</h1>
     {% endblock %}
     {% block content %}{% endblock %}
+<footer class="fixed-bottom">
+    <p>DSC 180B project by Kaitlyn Chan</p>
+    <p>Pokemon data sourced from <a href="https://www.smogon.com/">Smogon University</a> and <a href="https://bulbapedia.bulbagarden.net/wiki/Main_Page">Bulbapedia</a></p>
+</footer>
 </body>
