--- a/src/models/templates/input.html
+++ b/src/models/templates/input.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form method="post" class="text-center">
-    <label for="query">Search a Pokemon...</label>
+    <label for="query"><p>Search a Pokemon...</p></label>
     <input name="query" id="query" required>
     <input type="submit" value="Search">
 </form>
