make footer dark

--- a/src/models/templates/base.html
+++ b/src/models/templates/base.html
@@ -7,7 +7,7 @@
         <h1 class="mb-4">{% block title %}Pokemon Reverse Dictionary Demo{% endblock %}</h1>
     {% endblock %}
     {% block content %}{% endblock %}
-<footer class="fixed-bottom">
+<footer class="p-2 fixed-bottom bg-dark text-light">
     <p>DSC 180B project by Kaitlyn Chan</p>
     <p>Pokemon data sourced from <a href="https://www.smogon.com/">Smogon University</a> and <a href="https://bulbapedia.bulbagarden.net/wiki/Main_Page">Bulbapedia</a></p>
 </footer>
