--- a/src/models/templates/output.html
+++ b/src/models/templates/output.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container text-center">
     <ol class="mb-4">
         <li>{{pokemon_1[0]}} <img src={{pokemon_1[1]}} alt={{pokemon_1[0]}} /></li>
         <li>{{pokemon_2[0]}} <img src={{pokemon_2[1]}} alt={{pokemon_2[0]}} /></li>
