add gpt and word2vec error handling

--- a/src/models/templates/input.html
+++ b/src/models/templates/input.html
@@ -12,6 +12,12 @@
             <input name="model_type" id="ir_tf_idf_word2vec" value="ir_tf_idf_word2vec" type="radio" />
             <label for="ir_tf_idf_word2vec">IR-TF-IDF with Word2Vec similar words</label>
         </div>
+        
+<!--         OpenAI demo -->
+<!--         <div>
+            <input name="model_type" id="gpt_3" value="gpt_3" type="radio" />
+            <label for="gpt_3">GPT-3</label>
+        </div> -->
     </div>
     <br/>
     <label for="query"><p>Search a Pokemon...</p></label>
