--- a/src/models/templates/input.html
+++ b/src/models/templates/input.html
@@ -27,7 +27,8 @@
 <div class="text-left">
     <h3>Tips</h3>
     <ul>
-        <li>Query using biological features.</li>
+        <li>For best performance, query using biological features without punctuation (i.e. "fire cannons", "bulb on its back")</li>
+        <li>Collected data up to Generation 7 includes Pokemon elemental types, abilities, competitive summary (tier abbreviation, stat descriptions such as "fast", "heavy", "frail"), immediate evolution, biological description, National Dex ID number, and name.</li>
         <li>Word2Vec uses a pre-trained model based on Wikipedia text. Words that do not exist in this vocabulary will throw an error.</li>
     </ul>
 </div>
